--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.79",
     "@types/react-dom": "18.2.25",
     "autoprefixer": "10.4.19",
+    "classnames": "^2.3.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.1",
     "next": "14.2.1",
