--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.1",
     "next": "14.2.1",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.38",
     "prisma": "^5.3.1",
     "react": "18.2.0",
