--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^8.0.7",
     "react-simplemde-editor": "^5.2.0",
+    "recharts": "^2.8.0",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5",
     "zod": "^3.22.4"
