--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^8.0.7",
@@ -39,6 +40,7 @@
     "recharts": "^2.8.0",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5",
+    "vercel": "^34.1.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
