--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
     "@types/react-dom": "18.2.25",
+    "@vercel/postgres": "^0.8.0",
     "autoprefixer": "10.4.19",
     "axios": "^1.6.8",
     "classnames": "^2.3.2",
