--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.0.2",
+    "@reduxjs/toolkit": "^2.2.3",
     "@tanstack/react-query": "^4.35.3",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
@@ -38,6 +39,7 @@
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^8.0.7",
+    "react-redux": "^9.1.2",
     "react-simplemde-editor": "^5.2.0",
     "recharts": "^2.8.0",
     "tailwindcss": "3.4.3",
